# libgawron

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  animals.cpp  arrive_pl.json  main.cpp  vcmi.cpp
examples/data/: animals_de.json  animals_en.json  animals_pl.json  animals_ru.json  vcmi_pl.json
src/: CategoriesManager.cpp  CategoriesManager.h  Category.cpp  Category.h  CategoryDemand.cpp  CategoryDemand.h  Filler.cpp  Filler.h  Form.cpp  Form.h  FormDemand.cpp  FormDemand.h  FormsManager.cpp  FormsManager.h  JsonLoader.cpp  JsonLoader.h  JsonLoaderPrivate.cpp  JsonLoaderPrivate.h  Loader.h  Message.cpp  Message.h  NumericalCase.cpp  NumericalCase.h  Parameter.cpp  Parameter.h  Sentence.cpp  Sentence.h  Translator.cpp  Translator.h  TranslatorPrivate.cpp  TranslatorPrivate.h
